
    Finally, since all these algorithms are templated, a refactoring
    of the ltsmin structure has been done in order to introduce the
    spins_interface which describes the functions exported by a PINS
    file. With this refactoring, we can retrieve both a kripke or a
    kripkecube from a PINS file.

  - Translations for formulas such as FGp1 & FGp2 &...& FGp32 which
    used to take ages are now instantaneous.  (See issue #412.)

  - remove_fin() learned to remove more unnecessary edges by using
    propagate_marks_vector(), both in the general case and in the
    Rabin-like case.

  Bugs fixed:

  - Handle xor and <-> in a more natural way when translating
    LTL formulas to generic acceptancee conditions.

New in spot 2.9.3 (2020-07-22)

  Bug fixed:

  - Completely fix the ltlcross issue mentioned in previous release.

New in spot 2.9.2 (2020-07-21)

  Bugs fixed:

  - ltlcross --csv=... --product=N with N>0 could output spurious
    diagnostics claiming that words were rejected when evaluating
    the automaton on state-space.

  - spot::scc_info::determine_unknown_acceptance() now also update the
    result of spot::scc_info::one_accepting_scc().

New in spot 2.9.1 (2020-07-15)

  Command-line tools:

  - 'ltl2tgba -G -D' is now better at handling formulas that use
    '<->' and 'xor' operators at the top level.   For instance
         ltl2tgba -D -G '(Fa & Fb & Fc & Fd) <-> GFe'
    now produces a 16-state automaton (instead of 31 in Spot 2.9).

  - Option '-x wdba-minize=N' used to accept N=0 (off), or N=1 (on).
    It can now take three values:
      0: never attempt this optimization,
      1: always try to determinize and minimize automata as WDBA,
         and check (if needed) that the result is correct,
      2: determinize and minimize automata as WDBA only if it is known
         beforehand (by cheap syntactic means) that the result will be
         correct (e.g., the input formula is a syntactic obligation).